--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ application.langs="en"
 #db.default.jndiName=DefaultDS
 
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/frugal"
+db.default.url="jdbc:postgresql://localhost:5432/notes"
 db.default.user=postgres
 db.default.password=root
 db.default.jndiName=DefaultDS
